[package]
name = "dharanadb"
version = "0.1.0"
edition = "2021"
authors = ["Himank Jain <himankjain@yahoo.in>"]

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
serde = "1"
serde_derive = "1"
serde_json = "1.0.142"
thiserror = "2.0.12"

[lib]
name = "lib_dharnadb"
path = "src/lib.rs"

[[bin]]
name = "dharanadb"
path = "src/bin/main.rs"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
